dataset1235/2025-2/2318198438/users/4096178481/executions/1897677159_4233865845.log
== SUBMISSION (2025-08-26 01:02:48)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:56:44)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF * 9/5+32

print(round(tempC,2)
    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:57:31)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2)
    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round(tempC,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:05:36)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:06:01)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:02:47)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:05:10)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:57:58)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:05:51)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:05:22)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:57:45)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempF,2)    
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round(tempF,2)    
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:58:10)
-- CODE: 
tempF = float(input("Temperatura em Fahrenheit: "))

tempC = tempF*9/5+32

print(round(tempC,2))    
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Fahrenheit: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Fahrenheit: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Fahrenheit: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Fahrenheit: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Fahrenheit: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Fahrenheit: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
